<resources>
    <string name="app_name">F.G. LATTO</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_button">close button</string>
    <string name="submit_text">Submit</string>
    <string name="create_property">Create Property</string>
    <string name="property_name">Property Name</string>
    <string name="property_type">Property Type</string>
    <string name="house">House</string>
    <string name="rental">Rental</string>
    <string name="land">Land</string>
    <string name="select_location">Select Location</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_no_of_bedrooms">Enter Number of Bedrooms</string>
    <string name="enter_no_of_bathrooms">Enter No. of Bathrooms</string>
    <string name="enter_no_of_parking">Enter no. Of Parkings</string>
    <string name="enter_description">Enter Description</string>
    <string name="find_property_location">Find Property Location</string>
    <string name="search">Search</string>
    <string name="slogan">Leading real estate company based in the prestigious Waterfall Country Estate</string>
    <string name="discover_a_home_of_your_dreams">Discover a home of your dreams</string>
    <string name="sign_up">Sign up</string>
    <string name="login_redirect">
        <font>Already have an account? </font>
        <b><font>sign in</font></b>
    </string>
    <string name="for_sale">For Sale</string>
    <string name="contact_agent">Contact agent</string>
    <string name="see_on_maps">See on maps</string>
    <string name="message">Message</string>
    <string name="buy_now">Buy now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="properties">Properties</string>
    <string name="chat">Chat</string>
    <string name="valuations">Valuations</string>
    <string name="valuation_description">Looking to sell your property? Then please fill out some of the information below and we will contact you immediately to perform a Free valuation for you.</string>
    <string name="free_valuation">Free Valuation</string>
    <string name="chats">Chats</string>
    <string name="select_images">Select Images</string>
    <string name="choose_your_files_here">Choose your files here</string>
    <string name="image_size_label">20 MB max image size</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="general">General</string>
    <string name="logout">Logout</string>
    <string name="selected_language">Selected Language</string>
    <string name="select_a_language">Select a language</string>
    <string name="enter_size_in_sqf">Enter size in square feet</string>
    <string name="property_price">Property Price</string>
    <string name="property_description">Property Description</string>
    <string name="property_size">Property Size (in square feet)</string>
    <string name="no_of_parking">No. of parkings</string>
    <string name="no_of_bathrooms">No. of bathrooms</string>
    <string name="no_of_bedrooms">No. of bedrooms</string>
    <string name="bed">Bed</string>
    <string name="parking">Parking</string>
    <string name="bath">Bath</string>
    <string name="sqrf">Sqrf</string>
    <string name="nameOnCard">Name on card</string>
    <string name="cardNo">Card no.</string>
    <string name="cvv">CVV</string>
    <string name="expiryDate">Expiry date</string>
    <string name="users">Users</string>
    <string name="select_users">Select users</string>
    <string name="select_property_owner">Select property owner</string>
    <string name="price">Price</string>
    <string name="enter_valid_property">Select a property</string>
    <string name="enter_name_on_card">Enter name on card</string>
    <string name="enter_card_number">Enter a card number</string>
    <string name="invalid_card_number">Card no. must be 16 digits</string>
    <string name="enter_cvv">Enter a cvv</string>
    <string name="invalid_cvv">cvv must be 3 digits</string>
    <string name="enter_expiry_date">Enter an expiry date</string>
    <string name="invalid_expiry_date_format">Expiry date format: MM/YY</string>
    <string name="enter_message">Enter a message</string>
    <string name="done">Done</string>
    <string name="successful_purchase">Property purchase successful</string>
    <string name="sold">Sold</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="purchased_properties">Purchased Properties</string>
    <string name="create_a_new_account">Create new account</string>

    <string name="welcome">
        <font>Welcome to </font>
        <font color="#FFD700">F.G. Latto</font>
    </string>
    <string name="fullName">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="welcome_back">Welcome back</string>
    <string name="signin_to_account">Sign in to your account</string>

    <string name="signup_redirect">
        <font>Don’t have an account? </font>
        <font color="#FFD700">sign up</font>
    </string>

    <string name="signin_redirect">
        <font>Already have an account? </font>
        <font color="#FFD700">sign in</font>
    </string>
    <string name="sign_in">Sign in</string>
    <string name="revenue">Revenue</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_property">Update Property</string>
    <string name="request_valuation_text">Request Valuation</string>
    <string name="property_details">Property Details</string>
    <string name="analytics">Analytics</string>
    <string name="payment">Payment</string>
    <string name="upload_images">Upload images</string>
    <string name="about">About us</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="select_a_role">Select a role</string>
    <string name="valuation">Valuation</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="retry">Retry</string>
    <string name="connection_timeout">Connection timed out. Please check your connection and try again.</string>
    <string name="connection_timeout_lbl">Connection Timeout</string>
    <string name="cancel_text">Cancel</string>
    <string name="update_successful">Update successful</string>
    <string name="update_fail">Update failed</string>
    <string name="property_create_fail">Property creation failed</string>
    <string name="property_create_successful">Property creation successful</string>
    <string name="create_valuation_successful">Valuation creation successful</string>
    <string name="create_valuation_failed">Valuation creation failed</string>
    <string name="enter_property_name">• Enter a property name</string>
    <string name="enter_property_owner">• Select a property owner</string>
    <string name="enter_property_location">• Select property location</string>
    <string name="enter_property_price">• Enter a property price</string>
    <string name="enter_property_description">Enter a property description</string>
    <string name="enter_property_type">• Select a property type</string>
    <string name="enter_property_image">• Select property images</string>
    <string name="enter_property_size">• Enter property size</string>
    <string name="invalid_property_size">• Invalid property type</string>
    <string name="enter_property_parking">• Enter a valid number of parking</string>
    <string name="enter_property_bathroom">• Enter a valid number for bathrooms</string>
    <string name="enter_property_room">• Enter a valid number of rooms</string>
    <string name="enter_valuation_name">• Enter a valuation name</string>
    <string name="enter_price">• Enter an estimated price</string>
    <string name="delete_failed">• Delete failed</string>
    <string name="delete_successful">• Delete successful</string>
    <string name="blank_password">• Password cannot be empty</string>
    <string name="invalid_email_format">• Invalid email format</string>
    <string name="empty_email">• Email cannot be empty</string>
    <string name="invalid_phone_number_format">• Invalid phone number format</string>
    <string name="empty_phone_number">• Enter a phone number</string>
    <string name="empty_full_name">• Enter full name</string>
    <string name="company_description">Founded in 2018, F.G. Latto Property Group specializes in selling, designing, and constructing luxury properties in Waterfall Country Estate. Led by Noksie Khumalo and Fraser Gourlay, the company offers a comprehensive range of services, including its own building and architect divisions.</string>
    <string name="company_stats">With over 100 successful projects, F.G. Latto is the highest-selling independent agency in the area, prioritizing personalized client experiences. Turn your vision into a luxurious home with F.G. Latto Property Group.</string>

</resources>