<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/user_home"
        android:icon="@drawable/baseline_home_filled_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/transactions"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/transactions"/>

    <item
        android:id="@+id/user_valuations"
        android:icon="@drawable/baseline_calculate_24"
        android:title="@string/valuations"/>

    <item
        android:id="@+id/chat"
        android:icon="@drawable/baseline_bookmark_24"
        android:title="@string/bookmark"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"/>
</menu>