<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UpdatePropertyFragment"
    android:orientation="vertical"
    android:paddingVertical="10dp"
    android:paddingHorizontal="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_light"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/property_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:layout_marginTop="8dp"
                android:hint="@string/property_name"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/inter_light"
                android:layout_marginBottom="20dp"
                android:textSize="14sp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_type"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_light"/>


            <LinearLayout
                android:id="@+id/color_layout_container"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <!-- RecyclerView -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/property_types_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/owner_redirect"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/outline_person_24"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:id="@+id/owner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_property_owner"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter_light"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/baseline_chevron_right_24"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/location_redirect"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="20dp"
                >
                <ImageView
                    android:id="@+id/property_type_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/outline_location_on_24"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_location"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter_light"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/baseline_chevron_right_24"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_price"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_light"
                android:layout_marginBottom="10dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/property_price"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="numberDecimal"

                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/enter_amount"
                android:textSize="14sp"
                />

            <LinearLayout
                android:id="@+id/upload_image_redirect"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                >
                <ImageView
                    android:id="@+id/property_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/baseline_cloud_upload_24"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:id="@+id/image_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_images"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter_light"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/baseline_chevron_right_24"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/no_of_bedrooms_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_bedrooms"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_light"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/no_of_bedrooms"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="number"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/enter_no_of_bedrooms"
                android:textSize="14sp"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/no_of_bathrooms_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_bathrooms"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_light"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/no_of_bathrooms"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="number"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/enter_no_of_bathrooms"
                android:textSize="14sp"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/no_of_parking_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_parking"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_light"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/no_of_parking"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="number"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/enter_no_of_parking"
                android:textSize="14sp"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/sizeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_size"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_light"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="number"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/enter_size_in_sqf"
                android:textSize="14sp"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_description"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_light"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/property_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/edittext_background"
                android:textSize="14dp"
                android:minLines="4"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:hint="@string/enter_description" />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/update"
            android:textSize="24sp"
            android:fontFamily="@font/inter_medium"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:elevation="100dp"
            />
    </LinearLayout>

</LinearLayout>